--- a/.github/workflows/puml_generator.yml
+++ b/.github/workflows/puml_generator.yml
@@ -5,6 +5,7 @@ on:
       - '**.puml'
     branches:
       - master
+    pull_request:
 jobs:
   ci:
     runs-on: ubuntu-latest
@@ -42,11 +43,3 @@ jobs:
         uses: cloudbees/plantuml-github-action@master
         with:
           args: -v -tpng ${{ steps.getfile.outputs.files }}
-      - name: Push Local Changes
-        uses:  stefanzweifel/git-auto-commit-action@v4.1.2
-        with:
-          commit_user_name: "hostsguru"
-          commit_user_email: "hostsguru@gmail.org"
-          commit_author: "Hosts Guru <"hostsguru@gmail.com">"
-          commit_message: "Generate SVG and PNG images for PlantUML diagrams"
-          branch: ${{ github.head_ref }}
