--- a/.github/workflows/puml_generator.yml
+++ b/.github/workflows/puml_generator.yml
@@ -1,19 +1,16 @@
-name: generate plantuml
+name: Draw diagrams
 on: push
+
 jobs:
-  generate_plantuml:
+  diagrams:
+    name: Draw diagrams
     runs-on: ubuntu-latest
-    name: plantuml
     steps:
-      - name: checkout
-        uses: actions/checkout@v1
+      - name: Check out repository
+        uses: actions/checkout@v2
+      - name: Process diagrams
+        uses: Timmy/plantuml-action@v1
         with:
-          fetch-depth: 1
-      - name: plantuml
-        id: plantuml
-        uses: grassedge/generate-plantuml-action@v1.5
-        with:
-          path: .
-          message: "Render PlantUML files"
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          args: '-tutxt diagrams/*.txt'
+      - name: Display diagrams
+        run: cat diagrams/*.utxt
