--- a/.github/workflows/puml_generator.yml
+++ b/.github/workflows/puml_generator.yml
@@ -1,26 +1,48 @@
-name: generate plantuml
-on: push
+name: Generate PlantUML Diagrams
+on:
+  push:
+    paths:
+      - '**.puml'
+    branches:
+      - master
 jobs:
-  generate_plantuml:
+  ci:
     runs-on: ubuntu-latest
-    name: plantuml
+    env:
+      UML_FILES: ".puml"
     steps:
-      - name: Install Dependencies
-        run: |
-          sudo apt-get install graphviz
-      - name: Checkout Repository
+      - name: Checkout Source
         uses: actions/checkout@v2
-      - name: Process Diagrams
-        run: java -jar plantuml.jar -v -tsvg -r -o "${{ github.workspace }}/output" "src/**.pu"
-      - name: Display Diagrams
-        run: pwd && ls output
-      - name: Commit Diagrams
-        run: |
-          git config --local user.email "action@github.com"
-          git config --local user.name "GitHub Action"
-          git add .
-          git commit -m ":rocket: adding generated diagrams" || exit 0
-      - name: Push Diagrams
-        uses: ad-m/github-push-action@master
         with:
-          github_token: ${{ secrets.GITHUB_TOKEN }}
+          fetch-depth: 0
+      - name: Get changed UML files
+        id: getfile
+        run: |
+          git diff-tree -r --no-commit-id --summary ${{ github.sha }} \
+          | awk -F' ' '{
+            # ensure we are not trying to process deleted files
+            # only process puml files
+            # do not try to process our theme or custom config
+            if ( $1 !~ /^delete$/ && $4 ~ /\.puml$/ && $4 !~ /(theme|config)\.puml$/ )
+            {
+              # only print the file name and strip newlines for spaces
+              printf "::set-output name=files::" "%s ", $4
+            }
+          }
+          END { print "" } # ensure we do print a newline at the end
+          '
+      - name: UML files considered echo output
+        run: |
+          echo ${{ steps.getfile.outputs.files }}
+      - name: Generate SVG Diagrams
+        uses: cloudbees/plantuml-github-action@master
+        with:
+          args: -v -tsvg ${{ steps.getfile.outputs.files }}
+      - name: Generate PNG Diagrams
+        uses: cloudbees/plantuml-github-action@master
+        with:
+          args: -v -tpng ${{ steps.getfile.outputs.files }}
+      - name: Push Local Changes
+        uses:  stefanzweifel/git-auto-commit-action@v4.1.2
+        with:
+          branch: ${{ github.head_ref }}
