setting up branch name

--- a/.github/workflows/puml_generator.yml
+++ b/.github/workflows/puml_generator.yml
@@ -21,8 +21,12 @@ jobs:
           git config --local user.name "GitHub Action"
           git add .
           git commit -m ":rocket: adding generated diagrams" || exit 0
+      - name: Extract branch name
+        shell: bash
+        run: echo "##[set-output name=branch;]$(echo ${GITHUB_REF#refs/heads/})"
+        id: extract_branch
       - name: Push Diagrams
         uses: ad-m/github-push-action@master
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
-          branch: ${{ BRANCH_NAME }}
+          branch: ${{ steps.extract_branch.outputs.branch }}
