--- a/.github/workflows/openapi_generator.yml
+++ b/.github/workflows/openapi_generator.yml
@@ -1,10 +1,8 @@
-name: Plant UML SVG Generator
+name: Open API Markdown Generator
 on:
   push:
     branches:
       - main
-    paths:
-      - '**/openapi.yml'
 jobs:
   generate_plantuml:
     runs-on: ubuntu-latest
