--- a/.github/workflows/openapi_generator.yml
+++ b/.github/workflows/openapi_generator.yml
@@ -4,7 +4,7 @@ on:
     branches:
       - main
     paths:
-      - "**.yml"
+      - "**/openapi.yaml"
 jobs:
   generate_plantuml:
     runs-on: ubuntu-latest
