--- a/.github/workflows/openapi_generator.yml
+++ b/.github/workflows/openapi_generator.yml
@@ -4,7 +4,7 @@ on:
     branches:
       - main
     paths:
-      - "**/openapi.yaml"
+      - "**/openapi.(yaml|yml)"
 jobs:
   generate_plantuml:
     runs-on: ubuntu-latest
@@ -18,7 +18,7 @@ jobs:
         uses: actions/checkout@v2
       - name: Process OpenAPI
         run: |
-          widdershins ./rooms/openapi.yaml -o ./rooms/openapi.md --omitHeader  --code=true
+          widdershins ./**/openapi.yaml -o ./**/openapi.md --omitHeader  --code=true
       - name: Commit Diagrams
         run: |
           git config --local user.email "action@github.com"
